# credit-scoring-app

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md.bak  LICENSE  Makefile  README.md  SESSION_LOG.md  check_model.py  class_index.html  entrypoint.sh  environment.yml  function_index.html  index.html  patch_sophia_system.sh  pyproject.toml  requirements.txt  status.json  z_145eef247bfb46b6___init___py.html  z_dd52281f56f5d51f___init___py.html  z_dd52281f56f5d51f_convert_onnx_py.html  z_dd52281f56f5d51f_features_py.html  z_dd52281f56f5d51f_loader_py.html  z_dd52281f56f5d51f_monitoring_py.html  z_e5ccf62099f28249___init___py.html  z_e5ccf62099f28249_create_lite_db_py.html  z_e5ccf62099f28249_db_utils_py.html  z_f0e24b7f04f99860___init___py.html  z_f0e24b7f04f99860_dashboard_py.html  z_f0e24b7f04f99860_main_py.html  z_f1aa34bc7b1afc18___init___py.html  z_f1aa34bc7b1afc18_convert_to_sqlite_py.html  z_f1aa34bc7b1afc18_create_lite_db_py.html  z_f1aa34bc7b1afc18_db_utils_py.html  z_f1aa34bc7b1afc18_simulation_cli_py.html
delivery/: DEFENSE_SCRIPT.md  DEMO_GUIDE.md  PERFORMANCE_REPORT.md  TECHNICAL_STORYTELLING.md
docs/: DATABASE_PROOF.md  DEMO_GUIDE.md  PERFORMANCE_REPORT.md
notebooks/: data_drift_analysis.ipynb
scripts/: benchmark_optim.py  benchmark_resources.py  generate_proof_images.py  package_delivery.sh  rotate_logs.sh
specs/: 01_PRD.md  02_ARCHITECTURE.md  05_MONITORING_SPEC.md  current_plan.md  current_tasks.md  p8_scoring_mission.md
tests/: conftest.py  perf_test.py  test_api.py  test_api_monitoring.py  test_model.py  (+8 more)
(+23 files in other folders)
